--- a/week 1/1_1.ipynb
+++ b/week 1/1_1.ipynb
@@ -5,7 +5,7 @@
    "id": "ac3ffb86-8f0a-4f03-808a-466146a34c95",
    "metadata": {},
    "source": [
-    "# Неделя 0. Знакомство с системой"
+    "# Неделя 1. Поискс максимума"
    ]
   },
   {
@@ -13,7 +13,7 @@
    "id": "66aa2811-2f5e-4656-915d-14a2a6df788d",
    "metadata": {},
    "source": [
-    "## Попробуем написать функцию, которая суммирует 2 числа"
+    "## Попробуем написать функцию, которая находит максимум среди 10 чисел"
    ]
   },
   {
@@ -50,7 +50,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "int my_sum(int a, int b){\n",
+    "int my_max(int *mas, int size){\n",
     "    // Ваш код должен быть здесь\n",
     "    return a;\n",
     "}"
@@ -58,54 +58,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8e903503-db71-40d5-8eee-8a072143dfdd",
+   "id": "29332aa7-5739-45ca-aa8f-d484a6a79bda",
    "metadata": {},
    "source": [
-    "### Мы можем запустить наш код и проверить его работоспособность "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "ea782c54-7120-4642-8a42-d298101f7577",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1"
-     ]
-    }
-   ],
-   "source": [
-    "int res = my_sum(1, 2);\n",
-    "cout << res;"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "01ed6061-06f4-4bce-95c7-6ca5148e498b",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Попробуй еще раз"
-     ]
-    }
-   ],
-   "source": [
-    "if (my_sum(40, 13) == 53) cout << \"Поздравляю, Вы справились!\";   \n",
-    "else cout << \"Попробуй еще раз\"; "
+    "<p>Что такое * рядом с mas?</p>\n",
+    "<p>Размер массива, максимум для которого мы будем передавать, может быть очень большим.</p>\n",
+    "<p>Когда </p>"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "213f225f-a07f-4fde-ad36-95ccc79a3019",
+   "id": "c4428371-d9ef-426e-8113-179a7353344a",
    "metadata": {},
    "outputs": [],
    "source": []
