--- a/week 1/1_1.ipynb
+++ b/week 1/1_1.ipynb
@@ -71,7 +71,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "int mas[10] = {0, 9, 1, 8, 2, 7, 3, 6, 5};\n",
+    "int mas1[10] = {0, 9, 1, 8, 2, 7, 3, 6, 5};\n",
     "int size = 10;"
    ]
   },
@@ -98,7 +98,7 @@
     }
    ],
    "source": [
-    "cout << my_max(mas, size);"
+    "cout << my_max(mas1, size);"
    ]
   },
   {
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "a2df4ad8-9809-4abf-ac5c-a63584a5ac02",
    "metadata": {},
    "outputs": [
@@ -152,16 +152,109 @@
     }
    ],
    "source": [
-    "cout << my_max(mas, size);"
+    "cout << my_max(mas1, size);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c5c3520c-c426-4c3f-8c69-6a8e71ba01b5",
+   "metadata": {},
+   "source": [
+    "### А теперь попробуем на таких входных данных"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "7d57f966-f5f7-40f3-a379-8a9b6978e91d",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0"
+     ]
+    }
+   ],
+   "source": [
+    "int mas2[10] = {-10, -9, -1, -8, -2, -7, -3, -6, -5};\n",
+    "int size = 10;\n",
+    "cout << my_max(mas2, size);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f71480bb-a612-4e6e-a76b-c62fb18d785c",
+   "metadata": {},
+   "source": [
+    "### Правильный ответ был бы -1, но мы допустили ошибку и вывели 0\n",
+    "<p>Это связано с тем, что максимальное значение в массиве меньше, чем то, что мы задали изначально</p>\n",
+    "<p>Каким бы не указали начально значение - мы можем придумать контрпример </p>\n",
+    "<p>Если max = -999999, то для массива mas[1] = {-1 000 000,}; ответ будет неверный</p>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "135d0591-a30f-48a3-abee-d2844570c3e3",
+   "metadata": {},
+   "source": [
+    "### Нам необходимо в качестве максимума задать значение первого элемента, это позволит избежать подобных ситуаций"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "17de9e1a-c98c-4c32-ac6c-48aae9f69794",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "int my_max(int *mas, int size){\n",
+    "    int max = mas[0];\n",
+    "    for(int i=0;i<size;i++)\n",
+    "        if (mas[i] > max)\n",
+    "            max = mas[i];\n",
+    "    return max;\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "12b25015-fc84-434e-8f5c-1c05f02f2db5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9\n",
+      "0"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "ERROR: received unknown message\n",
+      "Message type: usage_request\n",
+      "ERROR: received unknown message\n",
+      "Message type: usage_request\n"
+     ]
+    }
+   ],
+   "source": [
+    "cout << my_max(mas1, size) << endl;\n",
+    "cout << my_max(mas2, size);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f6a91d9d-6afb-4835-ac6f-7601a391c415",
+   "metadata": {},
+   "source": [
+    "### Всё отлично и мы получаем правильные ответы"
+   ]
   }
  ],
  "metadata": {
